Fixed display issues on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App{
   display: flex;
   flex-direction: column;
-  min-height: 100dvh;
+  flex-grow: 1;
 }
