--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ https://colorhunt.co/palette/fefaf6eadbc8dac0a3102c57
   padding: 0;
   box-sizing: border-box;
 }
+
 html, body {
   width: 100%;
   height: 100%;
@@ -36,4 +37,7 @@ background-color: #FEFAF6;
 #root{
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
